--- a/shop/templates/about.html
+++ b/shop/templates/about.html
@@ -2,12 +2,12 @@
 {% load static %}
 {% block content %}
 
-<div class="about flex flex-col items-center">
+<div class="about flex flex-col items-center relative">
     {% include 'nav.html' %}
-    <div class="heading mt-28">
+    <div class="heading mt-28 relative">
         <h1 class='my-10 text-2xl font-bold'>About</h1>
     </div>
-    <div class='w-full px-10 md:px-28 xl:px-52 flex flex-col items-start'>
+    <div class='w-full px-10 md:px-28 xl:px-52 flex flex-col items-start pb-64 mb-40'>
         <h1 class='my-10 text-2xl font-semibold'>John Doe</h1>
         <div class='md:text-xl'>
             <div class='float-right top-0 right-0 w-1/2 md:w-72'>
@@ -20,6 +20,8 @@
            <p class='py-3'>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit quibusdam similique ullam, suscipit culpa nesciunt ducimus doloremque atque magnam? Delectus tempore tempora itaque quam at, doloremque, saepe, atque ipsa reiciendis animi earum sequi. Quos, optio. Iusto earum inventore odio voluptas cumque soluta consequuntur esse qui quaerat. Vero aliquam labore maxime ipsa ad! A voluptas pariatur, voluptates veritatis fugiat inventore deserunt, aperiam similique tenetur, odio quisquam ipsa ullam quia. A ipsum voluptas esse explicabo repellat fuga aliquam odio ut incidunt dolore! Minima labore accusamus at ipsum deserunt ipsam ad adipisci sunt reprehenderit, quisquam est, beatae id harum iste earum doloribus aliquam.</p>
         </div>
     </div>
+    
+    {% include 'footer.html' %}
     
 
 </div>
