--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,5 +1,5 @@
 {% load static %}
-<div class="footer flex flex-col bg-zinc-900 w-full text-white absolute bottom-0 p-10 h-fit" id="footer">
+<div class="footer flex flex-col bg-zinc-900 w-full text-white absolute bottom-0 p-10 md:px-16 xl:px-44 2xl:px-60 h-fit" id="footer">
     <div class="flex flex-col md:flex-row items-start md:items-start justify-between">
         <div class="social flex md:flex-col">
             <div class='my-2'>
@@ -15,7 +15,7 @@
                 <a href="#">@artlonge</a>
             </div>
         </div>
-        <div class="site-map flex flex-col md:flex-row flex-wrap items-start md:ml-20 xl:ml-52 m-2">
+        <div class="site-map flex flex-col md:flex-row md:justify-between flex-wrap items-start md:ml-20 xl:ml-52 m-2">
             <div class="flex flex-col p-2 md:p-12">
                 <a href="/shop">Home</a>
                 <a href="/shop/about">About</a>
