ADD: home page animations

--- a/shop/templates/cart.html
+++ b/shop/templates/cart.html
@@ -6,7 +6,7 @@
         {% include 'nav.html' %}
     </div>
 
-    <div class="relative top-36 md:px-16 xl:px-56 w-full flex flex-col items-start">
+    <div class="cart-items relative top-36 md:px-16 xl:px-56 w-full flex flex-col items-start">
     {% if cart_items %}
         <div class="flex pb-10">
             <p class="font-semibold">Cart</p>
