--- a/theme/static_src/src/styles.css
+++ b/theme/static_src/src/styles.css
@@ -122,12 +122,12 @@
     /* transform: translateY(0); */
 }
 .cart-items {
-    transform: translateY(300px);
+    transform: translateY(500px);
     transition: 0.9s ease-in-out;
 }
 
 .cart-items.loaded {
-    transform: translateY(20px);
+    transform: translateY(0);
 }
 
 @media screen and (min-width: 640px) {
