--- a/templates/form.html
+++ b/templates/form.html
@@ -10,5 +10,5 @@
         {% endif %}
     </div>
     {% endfor %}
-    <button class="bg-slate-900 text-white p-2 my-5 rounded-lg" type="submit">All Done</button>
+    <button class="bg-slate-900 text-white p-2 my-5 rounded-lg" type="submit">Done</button>
 </form>
