--- a/dashboard/templates/dash/products.html
+++ b/dashboard/templates/dash/products.html
@@ -4,28 +4,28 @@
 
 <div class="dash-products flex flex-col px-10 md:px-55 xl:px-64">
     <div class="back flex justify-start items-center cursor-pointer group my-10">
-            <i class="uil uil-arrow-left text-2xl group-hover:-translate-x-10 transition duration-300 ease-in-out"></i>
-            <a href="/dashboard/" class="ml-2 hover:text-black">Back to dashboard</a>
-        </div>
+        <i class="uil uil-arrow-left text-2xl group-hover:-translate-x-10 transition duration-300 ease-in-out"></i>
+        <a href="/dashboard/" class="ml-2 hover:text-black">Back to dashboard</a>
+    </div>
     <div class="bg-slate-800 flex justify-between  w-2/3 h-fit mb-5 mx-2 px-4 py-4 text-white rounded-lg">
         <p><span class="font-bold text-2xl">{{total_products}}</span> products</p>
         <p><span class="font-bold text-2xl">{{total_categories}}</span> categories</p>
         <a href="/shop/product/add" class="hover:text-white">
             <button class="bg-cyan-900 rounded-lg p-2 hover:scale-110 transition duration-300 ease-in-out">
-               <p> Add Product</p>
+                <p> Add Product</p>
             </button>
         </a>
         <a href="/shop/category/add" class="hover:text-white">
             <button class="bg-cyan-900 rounded-lg p-2 hover:scale-110 transition duration-300 ease-in-out">
-               <p> Add Category</p>
+                <p> Add Category</p>
             </button>
         </a>
     </div>
     {% for category in categories %}
-        <div class="mt-16">
-            <h1 class="font-bold text-2xl" >{{category.name}}{{total_categories|pluralize}}</h1>
-             <table class="table-auto">
-                <thead class="uppercase text-left">
+    <div class="mt-16">
+        <h1 class="font-bold text-2xl">{{category.name}}{{total_categories|pluralize}}</h1>
+        <table class="table-auto">
+            <thead class="uppercase text-left">
                 <tr>
                     <th class="py-3 px-6">#</th>
                     <th class="py-3 px-6">Name</th>
@@ -34,41 +34,42 @@
                     <th class="py-3 px-6">#</th>
                     <th class="py-3 px-6">#</th>
                 </tr>
-                </thead>
-                <tbody>
-            
+            </thead>
+            <tbody>
+
                 {% for product in products %}
-                    {% if product.category == category %}
-                    <tr>
-                        <td class="py-4 px-6 ">
-                            <img src="{{product.image_url}}" alt="" class="w-16 rounded-lg">
-                        </td>
-                        <td class="py-4 px-6 ">
-                            {{product.name}}                        
-                        </td>
-                        <td class="py-4 px-6 ">
-                            {{product.price}}
-                        </td>
-                        <td class="py-4 px-6 ">
-                           {{product.inventory}}
-                        </td>
-                        <td class="py-4 px-6 ">
-                           <a href="/dashboard/products/delete/{{product.id}}" class="text-red-300 text-xl hover:text-red-700 transition duration-300 ease-in-out">
+                {% if product.category == category %}
+                <tr>
+                    <td class="py-4 px-6 ">
+                        <img src="{{product.image_url}}" alt="" class="w-16 rounded-lg">
+                    </td>
+                    <td class="py-4 px-6 ">
+                        {{product.name}}
+                    </td>
+                    <td class="py-4 px-6 ">
+                        {{product.price}}
+                    </td>
+                    <td class="py-4 px-6 ">
+                        {{product.inventory}}
+                    </td>
+                    <td class="py-4 px-6 ">
+                        <a href="/dashboard/products/delete/{{product.id}}"
+                            class="text-red-300 text-xl hover:text-red-700 transition duration-300 ease-in-out">
                             <i class="uil uil-trash-alt"></i>
-                           </a>
-                        </td>
-                        <td class="py-4 px-6 ">
-                            <a href="/dashboard/product/edit/{{product.id}}">
-                                <i class="uil uil-edit-alt text-xl text-blue-500"></i>
-                            </a>
-                        </td>
-                    </tr>
-                    {% endif %}
+                        </a>
+                    </td>
+                    <td class="py-4 px-6 ">
+                        <a href="/dashboard/product/edit/{{product.id}}">
+                            <i class="uil uil-edit-alt text-xl text-blue-500"></i>
+                        </a>
+                    </td>
+                </tr>
+                {% endif %}
                 {% endfor %}
             </tbody>
-            </table>
-        </div>
-        
+        </table>
+    </div>
+
     {% endfor %}
 </div>
 
