ADD: message list view and template

--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -50,7 +50,7 @@
             </div>
         </a>
         <div class="tabs flex flex-col sm:flex-row flex-wrap sm:items-center sm:justify-center">
-            <a href="#">
+            <a href="/dashboard/messages">
                 <div
                     class="bg-slate-800 hover:bg-slate-700 transition duration-300 ease-in-out flex flex-col justify-center sm:w-64 sm:h-28 h-fit mb-5 mx-2 px-4 py-4 text-white rounded-lg messages">
                     {% if customer_messages > 0 %}
