--- a/dashboard/templates/dash/messages.html
+++ b/dashboard/templates/dash/messages.html
@@ -1,5 +1,25 @@
 {% extends 'base.html' %}
 
 {% block content %}
-
+<div class="customer_messages px-2 md:px-44 xl:px-64 flex flex-col items-center w-full">
+    <div class="mt-20 w-full md:w-2/3 xl:w-1/2">
+        <h1 class="font-bold text-2xl">Messages</h1>
+        <div class="w-full">
+            {% for message in customer_messages %}
+            <a href="#" class="hover:text-black">
+                <div {% if message.read %} class="border rounded-lg my-4 p-2 " {% else %}
+                    class="border-2 border-blue-500 hover:border transition duration-300 ease-in-out rounded-lg my-4 p-2" {% endif %}>
+                    <div class="flex justify-between">
+                        <p>{{message.name}}</p>
+                        <p>{{message.date}}</p>
+                    </div>
+                    <div>
+                        <p class="truncate">{{message.message}}</p>
+                    </div>
+                </div>
+            </a>
+            {% endfor %}
+        </div>
+    </div>
+</div>
 {% endblock %}
