--- a/dashboard/templates/dash/message_detail.html
+++ b/dashboard/templates/dash/message_detail.html
@@ -1,7 +1,51 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div>
-    {{customer_message.message}}
+<div class="flex flex-col w-full px-2 md:px-44 xl:px-64">
+    <div class="flex justify-start">
+        <div class="border rounded-lg my-4 p-2 w-full md:w-2/3 xl:w-1/2">
+            <div class="flex justify-between">
+                <p>{{customer_message.name}}</p>
+                <p>{{customer_message.date}}</p>
+            </div>
+            <div>
+                <p class="truncate">{{customer_message.message}}</p>
+            </div>
+        </div>
+    </div>
+    {% if replies %}
+    {% for reply in replies %}
+    <div class="flex justify-end">
+        <div class="border rounded-lg my-4 p-2 w-full md:w-2/3 xl:w-1/2">
+            <div class="flex justify-between">
+                <p>{{reply.date}}</p>
+            </div>
+            <div>
+                <p class="truncate">{{reply.reply}}</p>
+            </div>
+        </div>
+    </div>
+    {% endfor %}
+    {% endif %}
+
+    <div class="flex flex-col items-center mt-44">
+
+        <form action="#">
+            <h1 class="font-semibold">Send a message</h1>
+            {% csrf_token %}
+
+            <div class="my-3 flex flex-col">
+                <label for="reference">Reference</label>
+                <input class="rounded-lg" name="reference" type="text">
+            </div>
+            <div class="flex flex-col">
+                <label for="message">Message</label>
+                <textarea class="rounded-lg" name="message" id="message" cols="30" rows="10"></textarea>
+            </div>
+            <div>
+                <button type="submit" class="rounded-lg bg-slate-900 my-2 p-2 hover:scale-110 transition duration-300 ease-in-out text-white">Send</button>
+            </div>
+        </form>
+    </div>
 </div>
 {% endblock %}
