--- a/dashboard/templates/dash/message_detail.html
+++ b/dashboard/templates/dash/message_detail.html
@@ -4,7 +4,7 @@
 <div class="flex flex-col w-full px-2 md:px-44 xl:px-64">
     <div class="flex justify-start">
         <div class="border rounded-lg my-4 p-2 w-full md:w-2/3 xl:w-1/2">
-            <div class="flex justify-between">
+            <div class="flex justify-between mb-2">
                 <p>{{customer_message.name}}</p>
                 <p>{{customer_message.date}}</p>
             </div>
@@ -17,11 +17,11 @@
     {% for reply in replies %}
     <div class="flex justify-end">
         <div class="border rounded-lg my-4 p-2 w-full md:w-2/3 xl:w-1/2">
-            <div class="flex justify-between">
+            <div class="flex justify-end">
                 <p>{{reply.date}}</p>
             </div>
             <div>
-                <p class="truncate">{{reply.reply}}</p>
+                <p class="truncate">{{reply.body}}</p>
             </div>
         </div>
     </div>
@@ -30,17 +30,17 @@
 
     <div class="flex flex-col items-center mt-44">
 
-        <form action="#">
+        <form action="/dashboard/reply" method="POST">
             <h1 class="font-semibold">Send a message</h1>
             {% csrf_token %}
             <input type="hidden" value="{{customer_message.id}}" name="customer_message_id">
             <div class="my-3 flex flex-col">
                 <label for="reference">Reference</label>
-                <input class="rounded-lg" name="reference" type="text">
+                <input required class="rounded-lg" name="subject" type="text">
             </div>
             <div class="flex flex-col">
                 <label for="message">Message</label>
-                <textarea class="rounded-lg" name="message" id="message" cols="30" rows="10"></textarea>
+                <textarea required class="rounded-lg" name="body" id="message" cols="30" rows="10"></textarea>
             </div>
             <div>
                 <button type="submit" class="rounded-lg bg-slate-900 my-2 p-2 hover:scale-110 transition duration-300 ease-in-out text-white">Send</button>
