--- a/dashboard/templates/dash/message_detail.html
+++ b/dashboard/templates/dash/message_detail.html
@@ -1,7 +1,17 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="flex flex-col w-full px-2 md:px-44 xl:px-64">
+<div class="flex flex-col w-full px-10 md:px-44 xl:px-64">
+    <div class="flex items-center ">
+        <div class="flex justify-start items-center cursor-pointer group my-10 ">
+            <i class="uil uil-arrow-left text-2xl group-hover:-translate-x-10 transition duration-300 ease-in-out"></i>
+            <a href="/dashboard/messages" class="ml-2 hover:text-black">Back</a>
+        </div>
+        <div class="relative left-10">
+            <h1 class="font-semibold">{{customer_message.name}}</h1>
+            <p>{{customer_message.email}}</p>
+        </div>
+    </div>
     <div class="flex justify-start">
         <div class="border rounded-lg my-4 p-2 w-full md:w-2/3 xl:w-1/2">
             <div class="flex justify-between mb-2">
@@ -43,7 +53,8 @@
                 <textarea required class="rounded-lg" name="body" id="message" cols="30" rows="10"></textarea>
             </div>
             <div>
-                <button type="submit" class="rounded-lg bg-slate-900 my-2 p-2 hover:scale-110 transition duration-300 ease-in-out text-white">Send</button>
+                <button type="submit"
+                    class="rounded-lg bg-slate-900 my-2 p-2 hover:scale-110 transition duration-300 ease-in-out text-white">Send</button>
             </div>
         </form>
     </div>
