REFACTOR: color scheme

--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -29,7 +29,7 @@
     </div>
 
     <div class="flex flex-col items-center">
-        <a href="#" class="w-2/3">
+        <a href="/dashboard/transactions" class="w-2/3">
             <div
                 class="bg-slate-800 hover:bg-slate-700 transition duration-300 ease-in-out flex flex-col justify-center h-fit mb-5 mx-2 px-4 py-4 text-white rounded-lg sales">
                 <h1 class="font-bold text-2xl">Sales summary</h1>
