--- a/shop/templates/message_form.html
+++ b/shop/templates/message_form.html
@@ -3,12 +3,10 @@
 {% block content %}
 <div class="w-full flex flex-col items-center text-black min-h-screen">
     {% include 'nav.html' %}
-    <div class="mt-20 md:mt-44">
-        <h1 class="text-2xl  my-10 underline">Contact us</h1>
+    <div class="mt-20 md:mt-44 text-textPrimary">
+        <h1 class="text-2xl my-10">Contact us</h1>
         {% include 'form.html' %}
     </div>
-    
-    
 </div>
 <div class="relative w-full mt-80">
         {% include 'footer.html' %}
