--- a/templates/product.html
+++ b/templates/product.html
@@ -1,7 +1,7 @@
-<a href="/shop/product/{{product.id}}" class="hover:text-black">
+<a href="/shop/product/{{product.id}}" class="text-textPrimary hover:text-black">
 <div class="hover:scale-125 group transition duration-300 ease-in-out m-3 p-2 xl:w-60 rounded-none h-fit text-black">
     <img src="{{product.image_url}}" alt="{{product.name}}-image" class="w-full rounded-none group-hover:opacity-80 transition duration-300 ease-in">
-    <div class="flex justify-between items-center">
+    <div class="flex justify-between items-center text-textPrimary">
         <div class="p-3">
             <h2 class="font-semibold">{{product.name}}</h2>
             <p>ksh {{product.price}}</p>
