--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -17,8 +17,8 @@
 		{% tailwind_css %}
 	</head>
 
-	<body class="">
-		<div class="messages h-fit z-50 text-white">
+	<body class="bg-backgroundPrimary text-textPrimary">
+		<div class="messages h-fit z-50">
 			{% if messages %}
 			<ul class="messages">
 				{% for message in messages %}
