--- a/shop/templates/cart.html
+++ b/shop/templates/cart.html
@@ -9,7 +9,7 @@
     <div class="cart-items relative top-36 md:px-16 xl:px-56 w-full flex flex-col items-start">
     {% if cart_items %}
         <div class="flex pb-10">
-            <p class="font-semibold">Cart</p>
+            <p class="text-textSecondary">Cart</p>
             <i class="uil uil-angle-right"></i>
             <p>Checkout</p>
             <i class="uil uil-angle-right"></i>
@@ -21,14 +21,14 @@
                 <p>Cart Total: {{cart.cart_total}}</p>
             </div>
             <div class="group w-1/2">
-                <a href="/shop/checkout" class="hover:text-black flex justify-center">
+                <a href="/shop/checkout" class="text-textPrimary hover:text-textSecondary flex justify-center">
                     <p class="mr-3">Checkout</p>
                     <i class="uil uil-arrow-right group-hover:translate-x-4 transition duration-300 ease-in-out"></i>
                 </a>
             </div>
         </div>
         {% for item in cart_items %}
-        <div class="cart-item my-10 flex items-center justify-between p-3 w-full border border-black">
+        <div class="cart-item my-10 flex items-center justify-between p-3 w-full border border-backgroundSecondary rounded-lg">
             <div class="item-img w-1/4 md:w-52">
                 <img src="{{item.product.image_url}}" alt="{{item.product.name}} image">
             </div>
@@ -36,13 +36,13 @@
                 <h1 class="font-medium text-xl">{{item.product.name}}</h1>
                 <p>ksh {{item.product.price}}</p>
             </div>
-            <div class="flex items-center justify-between border w-1/5 p-2 border-black">
+            <div class="flex items-center justify-between  w-1/5 p-2 ">
                 <i class="uil uil-minus update-cart cursor-pointer" data-productId={{item.product.id}} data-action="remove"></i>
                 <p class="">{{item.quantity}}</p>
                 <i class="uil uil-plus update-cart cursor-pointer" data-productId={{item.product.id}} data-action="add"></i>
             </div>
             <div>
-                <i class="uil uil-trash-alt update-cart text-2xl text-red-800 hover:animate-bounce cursor-pointer" data-productId={{item.product.id}} data-action="delete"></i>
+                <i class="uil uil-trash-alt update-cart text-2xl text-danger hover:animate-bounce cursor-pointer" data-productId={{item.product.id}} data-action="delete"></i>
             </div>
         </div>
         {% endfor %}
