--- a/shop/templates/checkout.html
+++ b/shop/templates/checkout.html
@@ -5,7 +5,7 @@
     <div class="p-10 flex">
         <p>Cart</p>
         <i class="uil uil-angle-right"></i>
-        <p class="font-semibold">Checkout</p>
+        <p class="text-textSecondary">Checkout</p>
         <i class="uil uil-angle-right"></i>
         <p>Payment</p>
     </div>
@@ -20,7 +20,7 @@
                 <div class="m-5">
                     <h1>Contact info</h1>
                     {% for field in customer_form %}
-                    <div class="field flex flex-col text-black text-xl my-2">
+                    <div class="field flex flex-col text-textPrimary text-xl my-2">
                         {{ field.errors }}
                         {{ field.label_tag }} {{ field }}
                         {% if field.help_text %}
@@ -33,7 +33,7 @@
                 <div class="m-5">
                 <h1>Shipping Address</h1>
                 {% for field in shipping_form %}
-                    <div class="field flex flex-col text-black text-xl my-2">
+                    <div class="field flex flex-col text-textPrimary text-xl my-2">
                         {{ field.errors }}
                         {{ field.label_tag }} {{ field }}
                         {% if field.help_text %}
@@ -46,17 +46,17 @@
             <div class="flex justify-evenly items-center w-full p-2 sm:px-10">
                 <div class="back flex justify-start items-center cursor-pointer group my-10">
                     <i class="uil uil-arrow-left text-2xl group-hover:-translate-x-10 transition duration-300 ease-in-out"></i>
-                    <p class="ml-2">Back to cart</p>
+                    <p class="ml-2 hover:text-textSecondary">Back to cart</p>
                 </div>
-                <a href="/shop/process_order"><button class="bg-slate-900 text-white p-2 rounded-lg" type="submit">Proceed to payment</button></a>
+                <a href="/shop/process_order"><button class="bg-slate-900 text-white p-2 rounded-lg hover:text-textSecondary bg-backgroundSecondary" type="submit">Proceed to payment</button></a>
             </div>
         </form>
     </div>
     <div class="cart-summary xl:w-1/2 sm:w-2/3 p-5 xl:border-l">
         <h1 class="mb-5">Cart summary</h1>
-        <div class="flex justify-center">
+        <div class="flex xl:flex-col justify-center">
             {% for item in cart_items %}
-            <div class="cart-item flex items-center justify-evenly p-3 w-full border border-black xl:border-none">
+            <div class="cart-item flex items-center xl:my-2 justify-evenly p-3 w-full border border-backgroundSecondary rounded-lg xl:border-none">
                 <div class="item-img w-1/5 md:w-28">
                     <img src="{{item.product.image_url}}" alt="{{item.product.name}} image">
                 </div>
@@ -64,7 +64,7 @@
                     <h1 class="font-medium text-xl">{{item.product.name}}</h1>
                     <p>ksh {{item.product.price}}</p>
                 </div>
-                <div class="flex items-center justify-center border w-1/5 p-2 border-black">
+                <div class="flex items-center justify-center w-1/5 p-2">
                     <p class="">{{item.quantity}}</p>  
                 </div>
                 
